need to fix filecheck function

--- a/src/makefile
+++ b/src/makefile
@@ -26,4 +26,4 @@ clean:
 	find . -name "*.class" -type f -delete && \
 	rm *.jar
 clean-output:
-	rm *.postorder *.preorder *.inorder
+	rm *.postorder *.preorder *.inorder *.asm
